        was done in one huge transaction. Added a generator to lazily
        get objects to reindex, and then commit after every 500
        objects. The exact number might need tweaking. (I suspect 500
        is on the conservative side.)

      - html in parameters of external sources is no longer double
        escaped on saving.

    
  Silva 2.1

    Features added:


      - A quota subsystem has been added. It lets Managers set a quota
        on a publication (which can also be a virtual host
        root). Containers within the publication acquire the
        quota. The quota does not tally the space used by the xml of
        documents but counts only assets. The used space is tracked on
        every container and displayed on the settings screen. The
        quota can only be set by a Manager in the settings screen of
        the publication. The quota subsystem is off by default and
        must be activated in 'service_extensions',

      - 209497: Silva Link edit tab now displays rendered http link,
        while the preview shows the redirect within the frameset.

      - 100974: the preview tab in the SMI now previews using the
        public layout, with the SMI tabs still at the top.  NOTE: TOC
        elements in documents used to link to each items
        '/edit/tab_preview' when the document was viewed via it's
        preview tab.  This was creating issues, so now links in TOC
        elements always link to the public version.

      - 101827: A) lookup window will now list containers for any type
        of lookup window.  You can click the container title to "drill
        down" into the container, rather than (or in addition to)
        clicking the container's title in the sidebar.  In the cases
        where previously containers weren't listed, the containers are
        now listed, but references cannot be placed to them.  B) a
        "place reference to this container..." button was added, so