@@ -32,6 +32,10 @@ Silva changes
       - html in parameters of external sources is no longer double
         escaped on saving.
 
+      - Correct unauthorized error when a chief editor/manager want to use
+        the access tab and he don't have any access in the Silva root and the
+        service members implements the use direct lookup protocol.
+
     
   Silva 2.1
 
